tests/paczka1/small_fuzzy/80741757.err
Error in line 8: bC9vV S174 13,2
Error in line 14: bC9vV S722 15,4
